# Blogy

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg
src/: blog.py  configs.py  db_init.py  run.py
src/instance/: site.db
src/main/: site_routes.py
src/posts/: forms.py  models.py  routes.py
src/static/: main.css
src/templates/: about.html  account.html  create_post.html  home.html  login.html  post.html  register.html  reset_password_form.html  reset_password_request.html  user_posts.html
src/templates/errors/: 403.html  404.html  500.html
src/templates/layouts/: base.html
src/users/: forms.py  models.py  routes.py  utils.py
