[metadata]
name = Bloggy
description = A blog posting web application built with Python and Flask.
author = Ahmed Tarek
author_email = ahmedtarek4377@gamil.com
version = 0.1.0

keywords = Python, Flask, Wep, Blog
platforms = [win32, linux, darwin]
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Framework :: Flask


license = MIT
license_files = LICENSE
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:

package_dir =
    Bloggy = src

install_requires = file: requirements.txt, file: requirements-dev.txt